- Added start scrip to serverside - Added aliases - Refactor frontend side - Started making login logic

--- a/client/src/app/features/chats-list/componets/chats-list.component.html
+++ b/client/src/app/features/chats-list/componets/chats-list.component.html
@@ -1,18 +1,23 @@
-<app-item name="joka" lastMessage="ya ebav kozu"></app-item>
-<app-item name="joka" lastMessage="ya ebav kozu"></app-item>
-<app-item name="joka" lastMessage="ya ebav kozu"></app-item>
-<app-item name="joka" lastMessage="ya ebav kozu"></app-item>
-<app-item name="joka" [active]="true" lastMessage="ya ebav kozu"></app-item>
-<app-item name="joka" lastMessage="ya ebav kozu"></app-item>
-<app-item name="joka" lastMessage="ya ebav kozu"></app-item>
-<app-item name="joka" lastMessage="ya ebav kozu"></app-item>
-<app-item name="joka" lastMessage="ya ebav kozu"></app-item>
-<app-item name="joka" lastMessage="ya ebav kozu"></app-item>
-<app-item name="joka" lastMessage="ya ebav kozu"></app-item>
-<app-item name="joka" lastMessage="ya ebav kozu"></app-item>
-<app-item name="joka" lastMessage="ya ebav kozu"></app-item>
-<app-item name="joka" lastMessage="ya ebav kozu"></app-item>
-<app-item name="joka" lastMessage="ya ebav kozu"></app-item>
-<app-item name="joka" lastMessage="ya ebav kozu"></app-item>
-<app-item name="joka" lastMessage="ya ebav kozu"></app-item>
-<app-item name="joka" lastMessage="ya ebav kozu"></app-item>
+<div class="search-container">
+  <app-chats-search></app-chats-search>
+</div>
+<div class="chats-container">
+  <app-item name="joka" lastMessage="ya ebav kozu"></app-item>
+  <app-item name="joka" lastMessage="ya ebav kozu"></app-item>
+  <app-item name="joka" lastMessage="ya ebav kozu"></app-item>
+  <app-item name="joka" lastMessage="ya ebav kozu"></app-item>
+  <app-item name="joka" [active]="true" lastMessage="ya ebav kozu"></app-item>
+  <app-item name="joka" lastMessage="ya ebav kozu"></app-item>
+  <app-item name="joka" lastMessage="ya ebav kozu"></app-item>
+  <app-item name="joka" lastMessage="ya ebav kozu"></app-item>
+  <app-item name="joka" lastMessage="ya ebav kozu"></app-item>
+  <app-item name="joka" lastMessage="ya ebav kozu"></app-item>
+  <app-item name="joka" lastMessage="ya ebav kozu"></app-item>
+  <app-item name="joka" lastMessage="ya ebav kozu"></app-item>
+  <app-item name="joka" lastMessage="ya ebav kozu"></app-item>
+  <app-item name="joka" lastMessage="ya ebav kozu"></app-item>
+  <app-item name="joka" lastMessage="ya ebav kozu"></app-item>
+  <app-item name="joka" lastMessage="ya ebav kozu"></app-item>
+  <app-item name="joka" lastMessage="ya ebav kozu"></app-item>
+  <app-item name="joka" lastMessage="ya ebav kozu"></app-item>
+</div>
