--- a/client/src/app/pages/main/main-page.component.html
+++ b/client/src/app/pages/main/main-page.component.html
@@ -17,7 +17,9 @@
   <nb-card-body>
     <div class="main-content">
       <div class="sidebar-container">
-        <app-sidebar></app-sidebar>
+        <app-sidebar>
+          <app-chats-list></app-chats-list>
+        </app-sidebar>
       </div>
       <div class="body-container">
         <app-body>
