--- a/client/src/app/features/login/components/login-form/login-form.component.scss
+++ b/client/src/app/features/login/components/login-form/login-form.component.scss
@@ -3,11 +3,24 @@
 }
 
 .input-wrapper {
-  .input-group {
+  .input-group:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 
 .input-control {
   margin-top: 0.4rem;
+}
+
+.response-error {
+  position: relative;
+  top: 0;
+
+  margin: 15px 0 20px;
+  height: 1rem;
+
+  font-size: 1rem;
+  text-align: center;
+  color: #ff4141;
+  font-weight: 500;
 }
