--- a/client/src/app/pages/chat/chat-page.component.html
+++ b/client/src/app/pages/chat/chat-page.component.html
@@ -1,1 +1,4 @@
-<app-messages-list></app-messages-list>
+<app-messages-list
+  [receiver]="receiver | async"
+  [currentChat]="currentChat$ | async"
+></app-messages-list>
