--- a/client/src/app/features/chats-list/componets/search/search-list-input.component.html
+++ b/client/src/app/features/chats-list/componets/search/search-list-input.component.html
@@ -1,4 +1,4 @@
 <nb-form-field>
   <nb-icon nbPrefix icon="search-outline" pack="eva"></nb-icon>
-  <input type="text" nbInput fullWidth shape="round" placeholder="Search">
+  <input type="text" nbInput fullWidth shape="round" placeholder="Search" #input>
 </nb-form-field>
