--- a/client/src/app/features/chats-list/componets/user/search-list-user.component.scss
+++ b/client/src/app/features/chats-list/componets/user/search-list-user.component.scss
@@ -1,9 +1,12 @@
 .card {
   display: flex;
+  align-items: center;
 
   padding: 1rem;
   margin-bottom: 1rem;
 
+  text-decoration: none;
+  color: #000;
   background-color: #fff;
   border-radius: 0.5rem;
   box-shadow: 1px 1px 3px 0 #dcdcdc;
@@ -11,6 +14,11 @@
 
   &:hover {
     background-color: #f8f8f8;
+    color: #000;
+  }
+
+  &:focus {
+    color: #000;
   }
 
   &.active {
@@ -29,12 +37,5 @@
 
   border-radius: 50%;
   background-color: #d1ddff;
-  border: 1px solid #3366ff;
-}
-
-.last-message {
-  max-width: 150px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  border: 2px solid;
 }
