Front - Fixed self-messaging - Improved sidebar UI - Added link for logo
Server
- Return id for receiver

--- a/client/src/app/features/chats-list/componets/search-list.component.scss
+++ b/client/src/app/features/chats-list/componets/search-list.component.scss
@@ -24,3 +24,15 @@
     background: #555;
   }
 }
+
+.list-title {
+  margin: 0 0 20px 0;
+  padding: 5px 10px;
+
+  color: #fff;
+  font-size: 1rem;
+
+  background-color: #3366ff;
+  box-shadow: 1px 1px 3px 0 #bebebe;
+  border-radius: 5px;
+}
