--- a/client/src/app/pages/main/main-page.component.html
+++ b/client/src/app/pages/main/main-page.component.html
@@ -2,7 +2,7 @@
 
 <nb-layout-header>
   <div class="header">
-    <span class="logo">My App</span>
+    <a routerLink="/" class="logo">Messenger</a>
     <span class="spacer"></span>
     <ul class="nav-list">
       <li class="nav-item">
