--- a/client/src/app/features/chats-list/componets/search-list.component.scss
+++ b/client/src/app/features/chats-list/componets/search-list.component.scss
@@ -32,7 +32,7 @@
   color: #fff;
   font-size: 1rem;
 
-  background-color: #3366ff;
+  background-color: #7088d7;
   box-shadow: 1px 1px 3px 0 #bebebe;
-  border-radius: 5px;
+  border-radius: 5px 5px 30px 5px;
 }
