--- a/client/src/app/features/chats-list/componets/user/search-list-user.component.html
+++ b/client/src/app/features/chats-list/componets/user/search-list-user.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="getChatLink(chatList, id)" class="card">
+<a routerLinkActive="active" [routerLink]="getChatLink(chatList, id)" class="card">
   <div class="icon" [ngStyle]="{'border-color': hex}">{{name | nameIcon}}</div>
   <div class="name">{{name}}</div>
 </a>
