--- a/client/src/app/features/chats-list/componets/chat/search-list-chat.component.html
+++ b/client/src/app/features/chats-list/componets/chat/search-list-chat.component.html
@@ -1,4 +1,4 @@
-<div [routerLink]="id" class="card">
+<div routerLinkActive="active" [routerLink]="id" class="card">
   <div class="icon" [ngStyle]="{'border-color': hex}">{{name | nameIcon}}</div>
   <div class="content">
     <div class="name">{{name}}</div>
