--- a/client/src/app/features/chats-list/componets/search-list.component.scss
+++ b/client/src/app/features/chats-list/componets/search-list.component.scss
@@ -26,8 +26,11 @@
 }
 
 .list-title {
+  display: flex;
+  justify-content: space-between;
+
   margin: 0 0 20px 0;
-  padding: 5px 10px;
+  padding: 5px 20px 5px 10px;
 
   color: #fff;
   font-size: 1rem;
