--- a/client/src/app/features/login/components/login-form/login-form.component.scss
+++ b/client/src/app/features/login/components/login-form/login-form.component.scss
@@ -24,3 +24,17 @@
   color: #ff4141;
   font-weight: 500;
 }
+
+.submit-btn {
+  margin-bottom: 1rem;
+}
+
+.bottom-links-container {
+  margin: 0;
+
+  text-align: center;
+
+  a {
+    text-decoration: none;
+  }
+}
