--- a/client/src/app/features/messages-list/components/messages-list.component.html
+++ b/client/src/app/features/messages-list/components/messages-list.component.html
@@ -1,21 +1,26 @@
 <ng-container *ngIf="currentChat">
   <nb-chat [title]="getChatTitle(receiver, currentChat)">
-    <ng-container>
-      <nb-chat-message *ngFor="let msg of []"
-                       [type]="msg.type"
-                       [message]="msg.text"
-                       [reply]="msg.reply"
-                       [sender]="msg.user.name"
-                       [date]="msg.date"
-                       [quote]="msg.quote"
-                       [latitude]="msg.latitude"
-                       [longitude]="msg.longitude"
-                       [avatar]="msg.user.avatar">
-      </nb-chat-message>
-    </ng-container>
-
-    <nb-chat-form (send)="sendMessage($event, receiver, currentChat)" [dropFiles]="false">
+    <nb-chat-message *ngFor="let msg of messages$ | async"
+                     type="text"
+                     [message]="msg.text"
+                     [reply]="msg.sender === currentUser.id"
+                     [sender]="currentUser.username"
+                     [date]="msg.timestamp"
+                     [avatar]="'https://s3.amazonaws.com/pix.iemoji.com/images/emoji/apple/ios-12/256/robot-face.png'">
+    </nb-chat-message>
+    <nb-chat-form (send)="sendMessage($event, currentUser, receiver, currentChat)" [dropFiles]="false">
     </nb-chat-form>
   </nb-chat>
 
 </ng-container>
+
+
+<!--[type]="msg.type"
+[message]="msg.text"
+[reply]="msg.reply"
+[sender]="msg.user.name"
+[date]="msg.date"
+[quote]="msg.quote"
+[latitude]="msg.latitude"
+[longitude]="msg.longitude"
+[avatar]="msg.user.avatar">-->
