--- a/client/src/app/pages/chat/chat-page.component.html
+++ b/client/src/app/pages/chat/chat-page.component.html
@@ -1,4 +1,5 @@
 <app-messages-list
-  [receiver]="receiver | async"
+  [receiver]="receiver$ | async"
   [currentChat]="currentChat$ | async"
+  [currentUser]="currentUser$ | async"
 ></app-messages-list>
